# tealish

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  FUTURE.md  LICENSE  README.md  mypy.ini  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docs/: avm_doc.py  cli.rst  conf.py  examples.rst  index.rst  language.rst  questions.rst  quick_start.rst  recipes.rst  stdlib.rst  usage.rst  zen.rst
docs/_static/: sphinx_highlight.js
docs/_static/js/: custom.js  (+2 more)
docs/_templates/: custom-sidebar.html  layout.html  search.html  searchbox.html
examples/: box_structs.tl  boxes_with_structs.tl  counter_prize.tl  minimal.tl  minimal_immutable.tl  rich_types.tl  starter.tl  structs.tl  tealish_boilerplate.tl
examples/abi/: abi.tl
examples/arc4/: app.tl  contract.json  tests.py  utils.py
examples/auction/: auction.tl
examples/counter_prize/: counter_prize.tl
examples/curly/: curly.tl  order_book.tl
examples/recipes/: application_asset_optin.tl  btoi.tl  increase_cost_budget.tl  inner_app_call.tl  optimization_a.tl  optimization_b.tl  overflow.tl
tealish/: __init__.py  __main__.py  abi.py  base.py  build.py  cli.py  config.py  errors.py  expression_nodes.py  expressions.py  fmt.py  langspec.json  langspec.py  nodes.py  run.py  scope.py  stdlib.py  tealish_builtins.py  tealish_expressions.py  tealish_expressions.tx  tx_expressions.py  types.py  utils.py
tealish/scaffold/: .gitignore  requirements.txt  tealish.json
tests/: everything.teal  everything.tl  langspec_test.py  test.py
(+31 files in other folders)
